# jintonic

./: .gitignore  404.html  LICENSE  Makefile  README.md  doctests.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements_dev.txt  setup.py
.github/workflows/: ci.yml  docs.yml  publish.yml
api/chords/: index.html
api/harmonics/: index.html
api/intervals/: index.html
api/lattice/: index.html
api/primes/: index.html
api/scales/: index.html
docs/: index.md
docs/api/: chords.md  harmonics.md  intervals.md  lattice.md  primes.md  scales.md
docs/source/: chords.rst  conf.py  harmonics.rst  index.rst  intervals.rst  lattice.rst  primes.rst  scales.rst
jintonic/: __init__.py  chords.py  harmonics.py  intervals.py  lattice.py  primes.py  scales.py
search/: search_index.json
src/jintonic/: __init__.py  __main__.py  chords.py  harmonics.py  intervals.py  lattice.py  primes.py  scales.py
